--- a/leopards.yaml
+++ b/leopards.yaml
@@ -2,14 +2,11 @@ team: Leopards
 
 manager: Nora
 
-<<<<<<< HEAD
-coach: Nicholas
-=======
 coach: Melissa
->>>>>>> 8ff279f (Edit Leopards)
 
 members:
   - Linda
   - William
   - David
   - Olivia
+  - Evie
